# fastapiapp

./: alembic.ini  config  pyproject.toml  requirements.txt
app/: logger_config.json  main.py
app/api/dependencies/: users.py
app/api/v1/: __init__.py  auth.py  users.py
app/core/: events.py
app/core/settings/: app.py  dev.py  prod.py  test.py
app/database/: events.py
app/database/migrations/: env.py
app/database/migrations/versions/: 9d2140b6a2c4_initial_migration.py
app/schemas/: message.py  token.py  user.py
app/utils/: __init__.py  app_exceptions.py  custom_logger.py
