[tool.poetry]
name = "dbaas"
version = "0.1.0"
description = ""
authors = ["PankajKhanwani <khanwanipankaj.96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
keyring = ">=24.0.0,<25.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
